[gd_scene load_steps=4 format=3 uid="uid://22irrsv7en0k"]

[ext_resource type="Script" uid="uid://dwewflj42cpge" path="res://scripts/UI/card_ui.gd" id="1_e1hm3"]

[sub_resource type="LabelSettings" id="LabelSettings_e1hm3"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_birkm"]
font_size = 12

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1hm3")

[node name="Texture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="OrderLabel" type="Label" parent="Texture"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_e1hm3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueLabel" type="Label" parent="Texture"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 26.0
offset_right = 20.0
offset_bottom = 49.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_birkm")
horizontal_alignment = 1
vertical_alignment = 1
